client: move parsing client input into ClientCommand responsibility to ClientProcessorService